--- a/Cheatsheet/index.html
+++ b/Cheatsheet/index.html
@@ -5,7 +5,7 @@
     <head>
         <title>Cheatsheet</title>
         <link rel="stylesheet" href="./styles.css" type="text/css">
-        <link rel="icon" type="image/png" href="icons8-source-code-64.png"/>
+        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/MohamedCK/Cheatsheet-site/gh-pages/icons8-source-code-64.png"/>
     </head>
 
         <div id="Bor">
